--- a/TiseShortUrl/Pages/Index.cshtml
+++ b/TiseShortUrl/Pages/Index.cshtml
@@ -1,12 +1,56 @@
 ﻿@page
 @model IndexModel
+
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Short URL";
+    string protocol = HttpContext.Request.Scheme.StartsWith("https") ? "https://" : "http://";
 }
 
-<div class="text-center">
-    <h1 class="display-4">
-        Hello World!
-    </h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h1>URL Shortener</h1>
+<h5 style="color: red; font-weight:bold">Attention, all actions in the system are recorded and moderated.</h5>
+<h5 style="color: red; font-weight:bold">Any attempts to destabilize the service/server, posting illegal content, as well as damage to the user experience are punishable by blocking in the system!</h5>
+
+<hr/>
+<p>
+    <a asp-page="Create" class="btn btn-primary">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.ShortUrl[0].Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ShortUrl[0].OriginalUrl)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ShortUrl[0].Url)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model.ShortUrl) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                    <a href="@Html.DisplayFor(modelItem => item.OriginalUrl)">@Html.DisplayFor(modelItem => item.OriginalUrl)</a>
+            </td>
+            <td>
+                    @{
+                        string localLink = protocol + $"{Request.Host}/s/";
+                    }
+                    <a href="@localLink@Html.DisplayFor(modelItem => item.Url)">@localLink@Html.DisplayFor(modelItem => item.Url)</a>
+            </td>
+            <td>
+                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
+
