--- a/TiseShortUrl/Pages/Create.cshtml
+++ b/TiseShortUrl/Pages/Create.cshtml
@@ -1,11 +1,11 @@
 ﻿@page "{id:int?}"
-@model TiseShortUrl.Pages.UrlShortener.EditModel
+@model CreateModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
 }
 
-<h1>Edit</h1>
+<h1>Create</h1>
 
 <h4>ShortUrl</h4>
 <hr />
@@ -13,7 +13,6 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ShortUrl.Id" />
             <div class="form-group">
                 <label asp-for="ShortUrl.Name" class="control-label"></label>
                 <input asp-for="ShortUrl.Name" class="form-control" />
@@ -33,8 +32,8 @@
             </div>
             <br />
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-                <a asp-page="./Index" class="btn btn-secondary">Back to List</a>
+                <input type="submit" value="Create" class="btn btn-primary" />
+                <a asp-page="Index" class="btn btn-secondary">Back to List</a>
             </div>
         </form>
     </div>
