--- a/TiseShortUrl/Pages/Delete.cshtml
+++ b/TiseShortUrl/Pages/Delete.cshtml
@@ -1,12 +1,13 @@
 ﻿@page "{id:int?}"
-@model TiseShortUrl.Pages.UrlShortener.DetailsModel
+@model DeleteModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
 
-<h1>Details</h1>
+<h1>Delete</h1>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>ShortUrl</h4>
     <hr />
@@ -30,8 +31,10 @@
             @Html.DisplayFor(model => model.ShortUrl.Url)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.ShortUrl.Id" class="btn btn-primary">Edit</a>
-    <a asp-page="./Index" class="btn btn-secondary">Back to List</a>
+    
+    <form method="post">
+        <input type="hidden" asp-for="ShortUrl.Id" />
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a asp-page="./Index" class="btn btn-secondary">Back to List</a>
+    </form>
 </div>
