--- a/TiseShortUrl/Pages/Shared/_Layout.cshtml
+++ b/TiseShortUrl/Pages/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
         <header>
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
                 <div class="container">
-                    <a class="navbar-brand" asp-page="/UrlShortener/Index">ShortUrl</a>
+                    <a class="navbar-brand" asp-page="/Index">ShortUrl</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -33,13 +33,7 @@
                     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/UrlShortener/Index">UrlShortener</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Faq">FAQ</a>
                             </li>
                         </ul>
                     </div>
@@ -55,7 +49,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @ViewData["Year"] - TiseShortUrl - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; @ViewData["Year"] - TiseShortUrl - <a asp-area="" asp-page="/Faq">Faq</a>
         </div>
     </footer>
 
