Set https protocol in short url
Temporary solution: “hardwire” https at the application level. More information in the Trello bug report.

--- a/TiseShortUrl/Pages/Index.cshtml
+++ b/TiseShortUrl/Pages/Index.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewData["Title"] = "Short URL";
-    string protocol = HttpContext.Request.Scheme.StartsWith("https") ? "https://" : "http://";
+    string protocol = "https://";
 }
 
 <h1>URL Shortener</h1>
