--- a/TiseShortUrl/Pages/Create.cshtml
+++ b/TiseShortUrl/Pages/Create.cshtml
@@ -26,9 +26,9 @@
             </div>
             <br />
             <div class="form-group">
-                <label asp-for="ShortUrl.Url" class="control-label"></label>
-                <input asp-for="ShortUrl.Url" class="form-control" />
-                <span asp-validation-for="ShortUrl.Url" class="text-danger"></span>
+                <label asp-for="ShortUrl.ShortenedUrl" class="control-label"></label>
+                <input asp-for="ShortUrl.ShortenedUrl" class="form-control" />
+                <span asp-validation-for="ShortUrl.ShortenedUrl" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group">
