--- a/TiseShortUrl/Pages/Delete.cshtml
+++ b/TiseShortUrl/Pages/Delete.cshtml
@@ -25,10 +25,10 @@
             @Html.DisplayFor(model => model.ShortUrl.OriginalUrl)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ShortUrl.Url)
+            @Html.DisplayNameFor(model => model.ShortUrl.ShortenedUrl)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ShortUrl.Url)
+            @Html.DisplayFor(model => model.ShortUrl.ShortenedUrl)
         </dd>
     </dl>
     
